[package]
name = "iced_remarkable"
version = "0.1.0"
authors = ["Tyler Parker <tparker@computemachines.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libremarkable = "0.4.1"
iced_core = "0.2.1"
iced_native = "0.2.2"
iced_graphics = "0.1.0"
cgmath = "0.17.0"

[workspace]
members = ["examples/counter"]