[package]
name = "counter"
version = "0.1.0"
authors = ["Tyler Parker <tparker@computemachines.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
iced_native = "0.3.0"
iced_graphics = "0.1.0"
iced_remarkable = { path = "../.." }